@startuml

class Car {
    -id: int
    -model: String
    -year: int
    -price: double
    -description: String
}

class Brand {
    -id: int
    -name: String
 }

class Category {
    -id: int
    -name: String
}

class FuelType {
    -id: int
    -name: String
  }

Car "0..*" o-- "1" Brand : belongs to
Car "0..*" o-- "1" Category : belongs to
Car "0..*" o-- "1" FuelType : belongs to

@enduml
